cvat/apps/engine/static/engine/stylesheet.css
/*
 * Copyright (C) 2018 Intel Corporation
 *
 * SPDX-License-Identifier: MIT
 */

/* ----------------------- Classes ----------------------- */
.playerButton {
    fill: #09c;
    stroke-width: 2px;
    stroke: black;
    margin-top: 1%;
    margin-right: 15px;
    float:left;
    width: 40px;
    height: 40px;
}

.playerButton:hover {
    fill: rgba(0,0,0,0);
}

.playerButton:active {
    fill: #017196;
}

.disabledPlayerButton {
    fill:grey !important;
    stroke: grey !important;
}



.close {
    position: absolute;
    right: 5px;
    top: 5px;
    width: 32px;
    height: 32px;
    opacity: 0.3;
  }

  .close:hover {
    opacity: 1;
  }

  .close:before, .close:after {
    position: absolute;
    left: 15px;
    content: ' ';
    height: 22px;
    width: 2px;
    background-color: #333;
  }

  .close:before {
    transform: rotate(45deg);
  }

  .close:after {
    transform: rotate(-45deg);
  }



.graphicButton {
    opacity: 0.6;
    width: 20px;
    height: 20px;
    border: none;
    outline: none;
    margin-right: 10px;
}

.graphicButton:hover {
    opacity: 1;
}

.graphicButton:active {
    opacity: 0.2;
}

.lockButton {
    background: url("icons/unlock.png") no-repeat;
    background-size: 20px;
}

.locked {
    background: url("icons/lock.png") no-repeat;
    background-size: 20px;
}

.occludedButton {
    background: url("icons/non-occluded.png") no-repeat;
    background-size: 20px;
}

.occluded {
    background: url("icons/occluded.png") no-repeat;
    background-size: 20px;
}

.copyButton {
    background: url("icons/copy.png") no-repeat;
    background-size: 20px;
}

.propagateButton {
    background: url("icons/propagate.png") no-repeat;
    background-size: 20px;
}

.hiddenButton {
    background: url("icons/non-hidden.png") no-repeat;
    background-size: 20px;
}

.hiddenText {
    background: url("icons/hidden-text.png") no-repeat;
    background-size: 20px;
}

.hiddenShape {
    background: url("icons/hidden-shape.png") no-repeat;
    background-size: 20px;
}

.outsideButton {
    background: url("icons/non-outside.png") no-repeat;
    background-size: 20px;
}

.outside {
    background: url("icons/outside.png") no-repeat;
    background-size: 20px;
}

.keyFrameButton {
    background: url("icons/non-keyframe.png") no-repeat;
    background-size: 20px;
}

.keyFrame {
    background: url("icons/keyframe.png") no-repeat;
    background-size: 20px;
}

.prevKeyFrameButton {
    background: url("icons/prevKeyFrame.png") no-repeat;
    background-size: 20px;
}

.initKeyFrameButton {
    background: url("icons/initKeyFrame.png") no-repeat;
    background-size: 20px;
}

.nextKeyFrameButton {
    background: url("icons/nextKeyFrame.png") no-repeat;
    background-size: 20px;
}


.uiElement, .labelContentElement {
    width: 93%;
    border-radius: 2px;
    margin: 1% auto;
    padding: 1%;
    text-align: left;
    position: relative;
    border: 3px solid rgba(0,0,0,0);
    opacity: 0.65;
}

.labelContentElement:active {
    opacity: 0.6;
}

.highlightedUI {
    border: 3px solid black;
    opacity: 1;
}

.uiAttr {
    margin-left: 5%;
    margin-bottom: 2px;
}

.selectAttr {
    width: 60%;
}

.numberAttr {
    width: 20%;
}

.textAttr {
    width: 60%;
}

.shape {
    position: relative;
    shape-rendering: geometricprecision;
    color-rendering: optimizeQuality;
}

.selectedShape {
    cursor: move;
}

.polyline {
    fill: none !important;
}

.points {
    stroke: none !important;
    fill: none !important;
}

.shapeSelect {
    fill-opacity: 0;
    stroke-opacity: 1;
    visibility: hidden;
}

.shapeCreation {
    stroke: #fff;
    fill-opacity: 0;
}

.svg_select_points {
    fill-opacity: 1;
    cursor: pointer;
}

.svg_select_points_lt{
    cursor: nw-resize;
}
.svg_select_points_rt{
    cursor: ne-resize;
}
.svg_select_points_rb{
    cursor: se-resize;
}
.svg_select_points_lb{
    cursor: sw-resize;
}
.svg_select_points_t{
    cursor: n-resize;
}
.svg_select_points_r{
    cursor: e-resize;
}
.svg_select_points_b{
    cursor: s-resize;
}
.svg_select_points_l{
    cursor: w-resize;
}

.shapeText {
    font-size: 1.2em;
    fill: white;
    text-shadow: 0px 0px 3px black;
    cursor: default;
}

.highlightedShape {
    fill-opacity: 0.2;
    stroke-opacity: 1;
}

.occludedShape {
    stroke-dasharray: 5;
}

.mergeShape {
    fill: blue;
    fill-opacity: 0.5;
}

.mergePoints {
    fill: blue;
    fill-opacity: 0.5;
}

.mergeLine {
    stroke: blue;
    stroke-opacity: 1;
}

.groupShape {
    fill: darkmagenta;
    fill-opacity: 0.5;
}

.groupPoints {
    fill: darkmagenta;
    fill-opacity: 0.5;
}

.groupLine {
    stroke: darkmagenta;
    stroke-opacity: 1;
}

.lockedShape {
    mix-blend-mode: screen;
}

.lockedText {
    fill-opacity: 0.5;
}


.menuButton {
    width: 90%;
    height: 40px;
    margin-top: 2px;
}


.settingsBox {
    width: 15px;
    height: 15px;
    margin-left: 0px;
}

.custom-menu {
    display: none;
    z-index: 1000;
    position: absolute;
    overflow: hidden;
    border: 1px solid #CCC;
    white-space: nowrap;
    font-family: sans-serif;
    background: #FFF;
    color: #333;
    border-radius: 5px;
    padding: 0;
}

.buttonBlockOfLabelUI {
    margin: 5px;
    padding: 5px;
    border: 1px solid black;
    border-radius: 2px;
}

/* Each of the items in the list */
.custom-menu li {
    padding: 8px 12px;
    cursor: pointer;
    list-style-type: none;
    transition: all .3s ease;
    user-select: none;
}

.custom-menu li:hover {
    background-color: #DEF;
}

.customizedTab {
    border-radius: 5px 5px 0px 0px;
    width: 100%;
    width: 15%;
    float: left;
    margin: 0px 10px;
}

/* ----------------------- IDs ----------------------- */
#helpWindowContent, #settingsWindowContent, #colorUIWindowContent {
    width: 700px;
    height: 450px;
}

#annotationMenu
{
    background-color: #B0C4DE;
    padding: 8px 0;
    height: auto;
    max-width: 1000px;
    z-index: 100;
    float: left;
    position: absolute;
    border-radius: 5px;
    border: 1px solid black;
    padding: 5px;
}

#taskAnnotationCenterPanel {
    width: 83%;
    height: 100%;
    float: left;
}

#taskAnnotationRightPanel {
    height: 100%;
    width: 15%;
    float: left;
    margin: 0px 10px;
}

#uiContent, #trackManagement, #aamMenu, #labelsContent {
    border-bottom: 1px solid black;
    border-right: 1px solid black;
    border-left: 1px solid black;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0,0,0,0.5);
    background-color: #B0C4DE;
    text-align: center;
}

#shapeLabelSelector, #shapeModeSelector, #shapeTypeSelector, polyShapeSizeWrapper {
    width: 80%;
    margin-left: auto;
    margin-top: 2%;
}

#trackManagement, #aamMenu {
    padding: 1em 0;
    height: auto;
    width: 100%;
    margin: 10px 0px;
}

#aamMenu {
    text-align: center;
}

#aamHelpContainer {
    text-align: left;
    margin-left: 5px;
    overflow-y: auto;
}

#uiContent, #labelsContent {
    height: 75.4%;
    width: 100%;
    border-radius: 0px 0px 5px 5px;
    overflow-y: auto;
}

#player {
    margin: auto;
    width: 100%;
    height: 100%;
}

#playerFrame {
    width: 100%;
    height: 80%;
    border: 1px black solid;
    border-radius: 5px;
    background-color: #B0C4DE;
    overflow: hidden;
    position: relative;
}

#frameContent {
    position: absolute;
    z-index: 1;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;
}

#frameGrid {
    position: absolute;
    z-index: 2;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;
    pointer-events: none;
}

#frameBackground {
    position: absolute;
    z-index: 0;
    background-repeat: no-repeat;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;
}

#frameLoadingAnimation {
    fill-opacity: 0;
    stroke: #09c;
    stroke-width: 3px;
    stroke-dasharray: 50;
    animation: dash 1s linear infinite;
}

#frameLoadingAnim {
    z-index: 2;
    position: absolute;
}

#annotationStatisticTable {
    margin: 0px auto;
    border: 1px solid dimgrey;
    border-radius: 6px;
    text-align: left;
    width: 100%;
    text-align: center;
}

#playerPanel {
    width: 100%;
    height: 5%;
}

#playerSettings {
    width: 50%;
    height: 100%;
}

#playerStep {
   width: 2em;
}



#filterInputString {
    margin-right: 10px;
    width: 300px;
}


#playerProgress {
    -webkit-appearance: none;
    margin-top: 1.1%;
    background-color: rgba(0,0,0,0);
}

#playerProgress::-webkit-slider-runnable-track {
    height: 70%;
    cursor: pointer;
    background: #09c;
    border-radius: 3px;
    border: 1px solid #010101;
}

#playerProgress:focus {
    outline-color: transparent;
    outline-style: none;
}

#playerProgress::-webkit-slider-thumb {
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -10px;
}

#playerProgress::-moz-range-track {
    height: 90%;
    cursor: pointer;
    background: #09c;
    border-radius: 3px;
    border: 1px solid #010101;
}

#playerProgress::-moz-range-thumb {
    border: 1px solid #000000;
    height: 36px;
    width: 16px;
    border-radius: 3px;
    background: #ffffff;
    cursor: pointer;
}

#playerProgress::-moz-focus-outer { border: 0; }


@keyframes dash {
    0%   {stroke-dashoffset: 1; stroke: #09c;}
    50%  {stroke-dashoffset: 100; stroke: #f44;}
    100% {stroke-dashoffset: 300; stroke: #09c;}
}

